# ws-misc

./: .gitignore
c/: address.c  address.s  delit.ast  delit.c  delit.c.spanir  delit.c.spanir.main.bb.dot  goto.c  hello.cc  hellosdfsdf.bc  hellosdfsdf.ll  include_test.c  include_test.ch  include_test.chgcc  main.c  main.s  main1.c  main1.s  math.c  optimizeTest.c  overloading.c  plusplus.c  reachable.c  reachable.plist  test.c  test.c.spanir  test.cc  test.ll  test.plist  test.s  test.txt  test2.cc  virtualtest.c  void.s
cpp/: const.cc  const.cpp  const1.cc  defaultconstructor.cc  degrees.cc  delit.cpp  fileio.cc  input  keywords.cc  lvaluefunc.cc  namespace-lookup.cc  operator.cpp  piggybank.cc  private_constructor.cc  ptrsize.cc  special-class-members.cc  static_memeber.cc  stringstream.cc  test.cc  unordered_map.cpp  unordered_set.cpp  vector.cpp  virtual-addr.cpp  virtualness.cc
cpp/cmake/hello-world/: CMakeLists.txt  README.md
cpp/cmake/hello-world/spike/: iterVector.cpp
cpp/cmake/hello-world/src/: helloworldlib.cpp  main.cpp
cpp/kaledioscope/: CMakeLists.txt  toy.cc
graphviz/: graph-first.dot
htmlcss/: main.css  main.html
java/: Main.java
jshtmlcss/: index.html  jquery-animation.html  jquery-doc-ready.html
llvm/: hello.bc  hello.c  helloworld.ll
markdown/: code-and-list.html  code-and-list.md  section-numbers.html  section-numbers.md
nasm/: helloworld  helloworld.s  prog01  prog01.s  prog02  prog02.s
prolog/: append2.pl  cfg.pl  ex2-2.pl  ex2-4.pl  ex3-2descend2.pl  ex4-5.pl  flatten.pl  kb2.pl  kb2.pl~  member.pl  sec3-1.pl  sec3-1add.pl  test.pl
python/: input-vivekq7  morsecode.py  output.txt  profile_test.py  type_annotations.py  vivekq7.py
snippets/: .gitignore  README.md  clean.sh
spairo/: README.md  main.py
vidyalankar-demoppt/: .gitignore  Makefile  cascading.tex  conclusion.tex  gatequestions.tex  introduction.tex  kevin.sty  lerner.tex  main.tex  overview.tex  predictiveparsing.tex  presentation.sty  pst-rel-points.sty  references.bib  spa.tex  (+2 more)
(+642 files in other folders)
